Добавила корректировки в блок header

--- a/try1.html
+++ b/try1.html
@@ -89,7 +89,7 @@ ul.hr {
     display: inline-block; /* Отображать как строчный элемент */
     margin: 0 3em 0 3em;/* Отступ слева */
     border: 1px solid #ffffff; /* Рамка вокруг текста */
-    padding: 5px; /* Поля вокруг текста */
+    padding: 3px 7px; /* Поля вокруг текста */
    }
 li{
    list-style-type: circle;
@@ -109,7 +109,7 @@ li{
   <li>Статьи</li>
   <li>Контакты</li>
   </ul>
-  <h1> HOMEY KITCHEN </h1>
+  <h1> <big><big><big><big>HOMEY KITCHEN </big></big></big></big></h1>
   <h2 align="center">
   <pre style="background-color: #614f49">
   Сайт аппетитных и качественных рецептов</pre>
