Изменила список категорий рецептов

--- a/try1.html
+++ b/try1.html
@@ -89,12 +89,13 @@ ul.hr {
     display: inline-block; /* Отображать как строчный элемент */
     margin: 0 3em 0 3em;/* Отступ слева */
     border: 1px solid #ffffff; /* Рамка вокруг текста */
-    padding: 3px 7px; /* Поля вокруг текста */
+    padding: 2px 7px; /* Поля вокруг текста */
    }
 li{
    list-style-type: circle;
    line-height:2;
    font-weight: bold;
+   font-size: 16pt;
    }
  </style>
 </head>
@@ -163,18 +164,32 @@ li{
  <h1>
      <pre style="background-color: #614f49">
           Начните готовить прямо сейчас!          </h1>
-  <h3>Категории рецептов:</h3>
-<li>Завтраки</li>
-<li>Бульоны и супы</li>
-<li>Горячие блюда</li>
-<li>Гарниры</li> 
-<li>Салаты</li> 
-<li>Закуски</li>   
-<li>Напитки</li>
-<li>Соусы</li>
-<li>Десерты</li>
-<li>Выпечка</li>
-<li>Заготовки</li>
+ <h2>Категории рецептов:</h2>
+ <table border="0" cellspacing="5" cellpadding="10" width="90%" height="200">
+     <tr>
+         <td align="left">
+             <big>
+             <li>Завтраки</li>
+             <li>Бульоны и супы</li>
+             <li>Горячие блюда</li>
+             <li>Гарниры</li>
+             <li>Салаты</li>
+             <li>Закуски</li>
+             </big>
+</td>
+         <td align="left">
+             <big>
+             <li>Напитки</li>
+             <li>Соусы</li>
+             <li>Десерты</li>
+             <li>Выпечка</li>
+             <li>Заготовки</li>
+             </big>
+         </td>
+     </tr>
+ </table>
+  
+</figure>
 </font>
 </footer>
 </body>
