Изменил шрифты и провел оптимизацию кода

--- a/try1.html
+++ b/try1.html
@@ -4,12 +4,12 @@
  <meta charset="UTF-8">
  <title>Homey Kitchen </title>
  <style>
-     h1 {font-family: Hiragino Sans GB,"HiraginoSansGB-W3"}
-     h2 {font-family: Hiragino Sans GB,"HiraginoSansGB-W3"}
-     h3 {font-family: Hiragino Sans GB,"HiraginoSansGB-W3"}
-     p {font-family: Arial,"ArialMT"}
-     li {font-family: Arial,"ArialMT"}
-     td {font-family: Arial,"ArialMT"}
+     h1 {font-family: Jokerman,"Jokerman"}
+     h2 {font-family: Verdana,"VerdanaTM"}
+     h3 {font-family: Verdana,"VerdanaTM"}
+     p {font-family: Verdana,"VerdanaTM"}
+     li {font-family: Verdana,"VerdanaTM"}
+     td {font-family: Verdana,"VerdanaTM"}
      
  /* Задаем размеры нашей странице и блокам */
 body {
@@ -178,13 +178,11 @@ li{
              </big>
 </td>
          <td align="left">
-             <big>
              <li>Напитки</li>
              <li>Соусы</li>
              <li>Десерты</li>
              <li>Выпечка</li>
-             <li>Заготовки</li>
-             </big>
+             <li>Заготовки</li>     
          </td>
      </tr>
  </table>
